Messing around with the TPL library.

--- a/Sandbox/Sandbox.TPL/Sandbox.TPL.csproj
+++ b/Sandbox/Sandbox.TPL/Sandbox.TPL.csproj
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TPL.cs" />
+    <Compile Include="ParallelExample.cs" />
+    <Compile Include="TaskExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
