Still messing around with TPL library classes.

--- a/Sandbox/Sandbox.TPL/Sandbox.TPL.csproj
+++ b/Sandbox/Sandbox.TPL/Sandbox.TPL.csproj
@@ -39,7 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockingCollection.cs" />
+    <Compile Include="ConcurrentCollections.cs" />
     <Compile Include="ParallelExample.cs" />
+    <Compile Include="ParallelExample2.cs" />
+    <Compile Include="ParallelExample3.cs" />
     <Compile Include="TaskExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
