Still messing around with TPL library classes.

--- a/Sandbox/Sandbox.Async/Sandbox.Async.csproj
+++ b/Sandbox/Sandbox.Async/Sandbox.Async.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Async.cs" />
+    <Compile Include="AsyncExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
