Async and more task-based examples.

--- a/Sandbox/Sandbox.LINQ/Sandbox.LINQ.csproj
+++ b/Sandbox/Sandbox.LINQ/Sandbox.LINQ.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="LINQExamples.cs" />
     <Compile Include="MapReduceExample.cs" />
+    <Compile Include="PLINQExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
