More LINQ examples plus other additions.

--- a/Sandbox/Sandbox.LINQ/Sandbox.LINQ.csproj
+++ b/Sandbox/Sandbox.LINQ/Sandbox.LINQ.csproj
@@ -45,6 +45,11 @@
     <Compile Include="PLINQExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\bib.xml" />
+    <Content Include="Data\customers.xml" />
+    <Content Include="Data\orders.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
