--- a/Sandbox/Sandbox.Console/App.config
+++ b/Sandbox/Sandbox.Console/App.config
@@ -3,4 +3,25 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="DictServiceSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="DictServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://services.aonaware.com/DictService/DictService.asmx"
+          binding="basicHttpBinding" bindingConfiguration="DictServiceSoap"
+          contract="DictionaryService.DictServiceSoap" name="DictServiceSoap" />
+      <endpoint address="http://services.aonaware.com/DictService/DictService.asmx"
+          binding="customBinding" bindingConfiguration="DictServiceSoap12"
+          contract="DictionaryService.DictServiceSoap" name="DictServiceSoap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
