--- a/Sandbox/Sandbox.WaterJugsProblem/Sandbox.WaterJugsProblem.csproj
+++ b/Sandbox/Sandbox.WaterJugsProblem/Sandbox.WaterJugsProblem.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48AA3FF6-1B2B-4EE3-93C8-0FF690F2ABD7}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B75D5B01-42B3-47CF-AE2E-48D1F5381DED}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sandbox.Console</RootNamespace>
-    <AssemblyName>Sandbox.Console</AssemblyName>
+    <RootNamespace>Sandbox.WaterJugsProblem</RootNamespace>
+    <AssemblyName>Sandbox.WaterJugsProblem</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,37 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="BFS.cs" />
+    <Compile Include="Jug.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="Launcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sandbox.Dataflow\Sandbox.Dataflow.csproj">
-      <Project>{ff0949b7-67bc-4961-a389-4693f9f7fb0a}</Project>
-      <Name>Sandbox.Dataflow</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandbox.LINQ\Sandbox.LINQ.csproj">
-      <Project>{4c2d73b9-5253-4d8a-8b9b-ac6693dee75c}</Project>
-      <Name>Sandbox.LINQ</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandbox.MathNet\Sandbox.MathNet.csproj">
-      <Project>{72525a86-13e2-4b8b-a301-94f960a478e0}</Project>
-      <Name>Sandbox.MathNet</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandbox.Reactive\Sandbox.Reactive.csproj">
-      <Project>{15ba5198-9343-4186-a65d-52cb1607a7be}</Project>
-      <Name>Sandbox.Reactive</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandbox.TPL\Sandbox.TPL.csproj">
-      <Project>{c480515c-1f36-47c7-bc45-7c78dba49a1e}</Project>
-      <Name>Sandbox.TPL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sandbox.WaterJugsProblem\Sandbox.WaterJugsProblem.csproj">
-      <Project>{b75d5b01-42b3-47cf-ae2e-48d1f5381ded}</Project>
-      <Name>Sandbox.WaterJugsProblem</Name>
-    </ProjectReference>
+    <Compile Include="SolutionState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
